--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
-
+* {
+    font-family: 'Varela Round', sans-serif;
+}
 
 md-sidenav-layout.m2app-dark {
     background: black;
