--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
+@import '~primeng/resources/themes/omega/theme.css';
+@import '~primeng/resources/primeng.min.css';
+@import 'resources/font-awesome-4.7.0/css/font-awesome.min.css';
+
 * {
     font-family: 'Varela Round', sans-serif;
 }
@@ -14,9 +18,7 @@ md-input {
     direction: rtl;
 }
 
-#des {
-    min-width: 30%;
-}
+
 
 md-toolbar {
     direction: rtl;
@@ -33,7 +35,6 @@ md-toolbar {
 
 .app-content-inner {
     display:flex;
-    
     background-color: #e2546d;
 }
 
