--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
+
+/*@import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';*/
+
 @import '~primeng/resources/themes/omega/theme.css';
 @import '~primeng/resources/primeng.min.css';
 @import 'assets/font-awesome-4.7.0/css/font-awesome.min.css';
@@ -58,6 +60,11 @@ md-toolbar {
     direction: rtl;
     padding: 10px;
     min-width: 100px;
+}
+
+.ui-accordion-header a {
+    width: 200px;
+    text-decoration: none;
 }
 
 .app-content md-checkbox {
